2018-10-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/58618
	* gfortran.dg/associate_45.f90 : New test.

2018-10-18  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/58618
	* gfortran.dg/deferred_character_30.f90 : New test.

2018-10-18  Richard Biener  <rguenther@suse.de>

	PR middle-end/87087
	* gcc.dg/torture/pr87087.c: New testcase.
	* gcc.dg/graphite/pr84204.c: XFAIL.
	* gcc.dg/graphite/pr85935.c: Likewise.

2018-10-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/87537
	* gcc.target/i386/pr87537-1.c: New test.

2018-10-17  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/c11-static-assert-7.c, gcc.dg/c11-static-assert-8.c,
	gcc.dg/c11-static-assert-9.c, gcc.dg/c2x-static-assert-1.c,
	gcc.dg/c2x-static-assert-2.c, gcc.dg/c99-static-assert-2.c,
	gcc.dg/gnu2x-static-assert-1.c: New tests.
	* gcc.dg/missing-symbol-3.c: Update expected fix-it text.

2018-10-17  Tobias Burnus  <burnus@net-b.de>

	PR fortran/87632
	* gfortran.dg/select_type_47.f90: New.

2018-10-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/pr87623.c: New test.

2018-10-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84705
	* g++.dg/cpp0x/pr84705.C: New.

2018-10-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/56386
	PR fortran/58906
	PR fortran/77385
	* gfortran.dg/associate_44.f90 : New test.

	PR fortran/80260
	* gfortran.dg/select_type_45.f90 : New test.

	PR fortran/82077
	* gfortran.dg/select_type_46.f90 : New test.

2018-10-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/67125
	* gfortran.dg/allocate_with_source_26.f90: Extend
	testcase with polymorphic variables.

2018-10-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/67125
	* gfortran.dg/allocate_with_source_26.f90: New.

2018-10-15  David Malcolm  <dmalcolm@redhat.com>

	* gcc.dg/missing-header-fixit-3.c: Update expected indentation
	to reflect minimum margin width.
	* gcc.dg/missing-header-fixit-4.c: Likewise.
	* gcc.dg/plugin/diagnostic-test-show-locus-bw-line-numbers.c:
	Likewise.